name:                haskell-ring-chan
version:             0.1.0.0
license-file:        LICENSE
author:              Reid Draper
maintainer:          reiddraper@gmail.com
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

executable haskell-ring-chan
  main-is:             Main.hs
  --ghc-options: -threaded +RTS -N4 -RTS
  build-depends:       base >=4.7 && <4.8
                     , stm
                     , criterion
  default-language:    Haskell2010
